2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mfinfact.spad.pamphlet,
	src/algebra/twofact.spad.pamphlet: Try to avoid field
	extensions during factorization.

2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/vecrec.spad.pamphlet,
	src/algebra/u32vec.spad.pamphlet: Spent less time in
	rational reconstruction.

2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/listgcd.spad.pamphlet: localgcd(): Use
	heuristic gcd also for high degree.

2010-02-18  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/ssolve.spad.pamphlet: do not evaluate coefficients
	too eagerly.

	* src/algebra/mantepse.spad.pamphlet: delete unused line.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerfn.boot: Faster coercions for univariate
	polynomials.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerce.boot, src/interp/setq.lisp
	src/interp/clammed.boot: Cache function lookups
	during coercions.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/poly.spad.pamphlet: Faster polynomial
	multiplication in commutative case.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/multpoly.spad.pamphlet: Faster 'univariate'.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/polycat.spad.pamphlet: Faster 'map' for
	univariate polynomials.

2010-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/indexedp.spad.pamphlet: Faster polynomial
	addition.

2010-02-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Faster interpreter coercion.
	* src/interp/i-coerce.boot: coerceRetract(): Remove useless
	code.
	findRetractMms1(): Separate from retractByFunction().
	src/interp/setq.lisp, src/interp/clammed.boot: Memoize
	findRetractMms() and getConstantFromDomain().

2010-02-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/poly.spad.pamphlet: Faster coefficient.
