@@ -1,3 +1,10 @@
+2010-02-20  Ralf Hemmecke  <ralf@hemmecke.de>
+
+	* src/interp/g-error.boot, src/interp/setvart.boot,
+	src/interp/spaderror.lisp, src/lisp/fricas-package.lisp: introduce
+	new ')set breakmode quit' which quits on error with non-zero exit
+	code
+
 2010-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/mfinfact.spad.pamphlet,
